--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-query": "^3.34.19",
+    "react-router-dom": "^6.3.0",
+    "tailwind-styled-components": "^2.1.6"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
