--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-APP_URL="https://api.github.com"
-CLIENT_ID="920f6793d5ee86fd2741"
+VITE_APP_URL=https://api.github.com
+VITE_CLIENT_ID=920f6793d5ee86fd2741
