refactor some code and add new import configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,16 +15,17 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {
       "@components": ["components/index"],
       "@components/*": ["components/*"],
+      "@interfaces/*": ["interfaces/*"],
       "@layout": ["layout/index"],
       "@layout/*": ["layout/*"],
       "@pages/*": ["pages/*"],
-      "@services": ["services/index"],
       "@services/*": ["services/*"],
       "@styles/*": ["styles/*"],
+      "@icons/*": ["icons/index"],
     },
   },
   "include": ["src"],
