add tailwind config and fix some weird layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,17 +15,19 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"],
-      "@interfaces/*": ["interfaces/*"],
-      "@services/*": ["services/*"],
-      "@styles/*": ["styles/*"],
-      "@layout/*": ["layout/*"],
-      "@pages/*": ["pages/*"],
-      "@layout": ["layout/index"],
-      "@icons/*": ["icons/index"],
+      "@components/*": ["src/components/*"],
+      "@interfaces/*": ["src/interfaces/*"],
+      "@services/*": ["src/services/*"],
+      "@styles/*": ["src/styles/*"],
+      "@layout/*": ["src/layout/*"],
+      "@pages/*": ["src/pages/*"],
+      "@layout": ["src/layout/index"],
+      "@icons/*": ["src/icons/index"],
     },
   },
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules"]
 }
